add asset manageement and editing in the editor
